@@ -1,3 +1,13 @@
+2011-11-07  Yuqiang Xian  <yuqiang.xian@intel.com>
+
+        Fix gcc 4.4 compilation warnings in DFG 32_64
+        https://bugs.webkit.org/show_bug.cgi?id=71762
+
+        Reviewed by Filip Pizlo.
+
+        * dfg/DFGJITCodeGenerator.h:
+        (JSC::DFG::JITCodeGenerator::registersMatched):
+
 2011-11-07  Filip Pizlo  <fpizlo@apple.com>
 
         DFG code base should allow for classes not related to DFG::JITCompiler
